--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod  --base-href ./ && cp CNAME dist/CNAME",
+    "build:ci": "ng build --prod --base-href ./ && cp CNAME dist/CNAME --vendor-chunk=true",
     "test": "ng test",
+    "test:ci": "ng test --no-watch --browsers=ChromeHeadless",
     "lint": "ng lint --force",
     "e2e": "ng e2e"
   },
