--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod  --base-href ./ && cp CNAME dist/CNAME",
-    "build:ci": "ng build --prod --base-href ./ && cp CNAME dist/CNAME --vendor-chunk=true",
+    "build:ci": "ng build --prod --vendor-chunk=true --base-href ./ && cp CNAME dist/CNAME",
     "test": "ng test",
     "test:ci": "ng test --no-watch --browsers=ChromeHeadless",
     "lint": "ng lint --force",
