--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod  --base-href ./ && cp CNAME dist/CNAME",
+    "build": "ng build --base-href ./ && cp CNAME dist/CNAME",
     "build:ci": "ng build --prod --vendor-chunk=true --base-href ./ && cp CNAME dist/CNAME",
     "test": "ng test",
     "test:ci": "ng test --no-watch --browsers=ChromeHeadless",
