--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
       - npm install
   build:
     commands:
+      - npm run build
       - npm run build:ci
       - npm run test:ci
     
